...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        "Contacts d'urgence",
                        style = MaterialTheme.typography.titleLarge,
                        fontWeight = FontWeight.SemiBold
                    )
                },
                navigationIcon = {
                    IconButton(onClick = { navController.navigateUp() }) {
...
